# yam_test

./: .gitignore  README.md  pyproject.toml  requirements.txt  yam.bat  yam.ps1
config/: yam_pro.yaml
docs/: leader-follower.md  maintenance.md  motors.md  overview.md  setup-windows.md  troubleshooting.md  wiring-and-can.md
src/arm_test/: __init__.py  can_backend.py  cli.py  config.py  detect.py  dm_motor.py  encoder.py  gripper.py  live.py  motor_chain.py  selftest.py
src/arm_test/diagnostics/: __init__.py  can_health.py  motor_test.py  report.py
tests/: test_arm_profiles.py  test_dm_protocol.py  test_live_safety.py
